feat: add structured naming and relationship-aware PDF workflow
Introduce optional naming parts with filename warnings, per-image part labels, lightweight measurement checks/connections in the existing stroke flow, and PDF/export updates that carry labels and relationship summaries without adding modal-heavy beta entry points.

--- a/index.html
+++ b/index.html
@@ -2542,7 +2542,7 @@
           <input
             type="text"
             id="projectName"
-            placeholder="Project Name"
+            placeholder="Customer - Sofa Type - Date"
             value="New Sofa"
             class="tinput"
             data-sharkid="__1"
@@ -3241,13 +3241,13 @@
       <!-- Name/title box outside the scroll area (always visible at top of images panel) -->
       <div class="image-name-container px-3 bg-white border-b border-slate-200 py-2">
         <label for="currentImageNameBox" class="block text-[10px] text-slate-500 mb-1"
-          >Image name</label
+          >Image part label</label
         >
         <input
           id="currentImageNameBox"
           type="text"
           class="w-full px-2 py-1 border border-slate-300 rounded-md text-[12px] focus:outline-none focus:ring-2 focus:ring-primary-300"
-          placeholder="Rename current image"
+          placeholder="front, back, left arm, cushion top"
         />
       </div>
       <div
