fix: preserve brush size value and support ctrl-wheel resizing

--- a/index.html
+++ b/index.html
@@ -2487,7 +2487,7 @@
             value="2"
             class="border border-gray-300 rounded text-sm"
             style="height: 34px; margin: 0; cursor: text; width: 72px; padding: 2px 6px"
-            title="Brush size in pixels (Ctrl + Mouse Wheel in Privacy Erase mode)"
+            title="Brush size in pixels (Ctrl + Mouse Wheel over canvas)"
           />
           <button id="arrowStartBtn" class="tbtn icon-btn" title="Start Arrow">
             <svg
