fix: stabilize PDF export state and drawing controls

--- a/index.html
+++ b/index.html
@@ -2190,7 +2190,8 @@
       }
 
       body.master-view-active #captureFrame {
-        border-color: transparent !important;
+        border-color: rgba(15, 23, 42, 0.65) !important;
+        border-style: dashed !important;
         box-shadow: none !important;
         background: transparent !important;
         pointer-events: none;
@@ -2487,7 +2488,7 @@
             value="2"
             class="border border-gray-300 rounded text-sm"
             style="height: 34px; margin: 0; cursor: text; width: 72px; padding: 2px 6px"
-            title="Brush size in pixels (Ctrl + Mouse Wheel over canvas)"
+            title="Brush size in pixels (Alt + Mouse Wheel over brush size input)"
           />
           <button id="arrowStartBtn" class="tbtn icon-btn" title="Start Arrow">
             <svg
